--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -71,7 +71,7 @@
                         <!-- gender -->
                         <li>
                             <div class="item-content">
-                                <div class="item-media"><i class="f7-icons">persons</i></div>
+                                <div class="item-media"><i class="f7-icons">heart</i></div>
                                 <div class="item-inner">
                                     <div class="item-title label">Geschlecht</div>
                                     <div class="item-input">
