Removed inline css

--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -46,7 +46,7 @@
                                                 dieser Station nicht durchführen:
                                             </div>
                                             {{#each n in nonPermittedSportTypes}}
-                                                <div style="text-align: center;">{{n}}</div>
+                                                <div class="t-center">{{n}}</div>
                                             {{/each}}
                                             <br>
                                             <div class="t-center">Dies liegt an dem Alter, dem Geschlecht
