Moved inline css to class

--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -6,9 +6,8 @@
                     {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 12px">info</i>
                 </a>
             </div>
-            <div class="list-block"
-                 style="{{#if
-                         gap}}margin-bottom: 70px; padding-bottom: 70px; border-bottom: 1px solid rgb(200, 200, 200);{{/if}}">
+            <div class="list-block {{#if
+                    gap}}gap{{/if}}">
                 <ul>
                     {{#each m in measurements}}
                         {{>attempt n=@index measurement=m metadata=metadata showIcon=true}}
