Added basic AC generation UI

--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -42,7 +42,7 @@
                             Hi there
                         </div>
                         <div class="swiper-slide">
-                            I'm different
+                            {{> accessCodes}}
                         </div>
                     </div>
                 </div>
