--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -20,6 +20,39 @@
             </div>
 
             <div class="page-content">
+            <!--{{#each u in uiElements}}-->
+
+                    <!--{{/each}}-->
+
+                <div class="list-block">
+                    <ul>
+                        {{#each g in groupNames}}
+                            <li>
+                                <div class="item-content">
+                                    <div class="item-inner">
+                                        <div class="item-title label">{{g}}</div>
+                                        <div class="item-input">
+                                            <label class="label-switch">
+                                                <input type="checkbox">
+                                                <div class="checkbox"></div>
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        {{/each}}
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title label">Bla</div>
+                                    <div class="item-input">
+                                        <input type="text">
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
                 <!--<div id="output-swiper" class="swiper-container full-height">-->
                 <!--<div class="swiper-wrapper">-->
                     <!--{{#each g in groups}}-->
@@ -136,131 +169,143 @@
         <div class="popover-inner">
             <div class="list-block accordion-list">
                 <ul>
-                    <li class="accordion-item">
-                        <a href="" class="item-link item-content">
-                            <div class="item-media"><i class="f7-icons">persons</i></div>
-                            <div class="item-inner">
-                                <div class="item-title">Gruppen</div>
-                                <div class="item-after">Alle</div>
+                    {{#with groupSettings}}
+                        <li class="accordion-item">
+                            <a href="" class="item-link item-content">
+                                <div class="item-media"><i class="f7-icons">persons</i></div>
+                                <div class="item-inner">
+                                    <div class="item-title">Gruppen</div>
+                                    <div class="item-after">{{text}}</div>
+                                </div>
+                            </a>
+                            <div class="accordion-item-content" style="padding-left: 5%;">
+                                <div class="list-block">
+                                    <ul>
+                                        {{#each g in groupNames}}
+                                            <li>
+                                                <div class="item-content">
+                                                    <div class="item-inner">
+                                                        <div class="item-title label">{{g}}</div>
+                                                        <div class="item-input">
+                                                            <label class="label-switch">
+                                                                <input type="checkbox" {{groupChecked g}}>
+                                                                <div class="checkbox" data-type="group"
+                                                                     data-attr="{{g}}"></div>
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
                             </div>
-                        </a>
-                        <div class="accordion-item-content" style="padding-left: 5%;">
-                            <div class="list-block">
-                                <ul>
-                                    {{#each g in groupNames}}
+                        </li>
+                    {{/with}}
+                    {{#with genderSettings}}
+                        <li class="accordion-item">
+                            <a href="" class="item-link item-content">
+                                <div class="item-media"><i class="f7-icons">heart</i></div>
+                                <div class="item-inner">
+                                    <div class="item-title">Geschlecht</div>
+                                    <div class="item-after">{{text}}</div>
+                                </div>
+                            </a>
+                            <div class="accordion-item-content" style="padding-left: 5%;">
+                                <div class="list-block">
+                                    <ul>
                                         <li>
                                             <div class="item-content">
                                                 <div class="item-inner">
-                                                    <div class="item-title label">{{g}}</div>
+                                                    <div class="item-title label">Männlich</div>
                                                     <div class="item-input">
                                                         <label class="label-switch">
-                                                            <input type="checkbox">
-                                                            <div class="checkbox"></div>
+                                                            <input type="checkbox" {{checked m}}>
+                                                            <div class="checkbox" data-type="gender"
+                                                                 data-attr="m"></div>
                                                         </label>
                                                     </div>
                                                 </div>
                                             </div>
                                         </li>
-                                    {{/each}}
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="accordion-item">
-                        <a href="" class="item-link item-content">
-                            <div class="item-media"><i class="f7-icons">heart</i></div>
-                            <div class="item-inner">
-                                <div class="item-title">Geschlecht</div>
-                                <div class="item-after">Alle</div>
-                            </div>
-                        </a>
-                        <div class="accordion-item-content" style="padding-left: 5%;">
-                            <div class="list-block">
-                                <ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Männlich</div>
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox">
-                                                        <div class="checkbox"></div>
-                                                    </label>
+                                        <li>
+                                            <div class="item-content">
+                                                <div class="item-inner">
+                                                    <div class="item-title label">Weiblich</div>
+                                                    <div class="item-input">
+                                                        <label class="label-switch">
+                                                            <input type="checkbox" {{checked w}}>
+                                                            <div class="checkbox" data-type="gender"
+                                                                 data-attr="w"></div>
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Weiblich</div>
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox">
-                                                        <div class="checkbox"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="accordion-item">
-                        <a href="" class="item-link item-content">
-                            <div class="item-media"><i class="f7-icons">tags</i></div>
-                            <div class="item-inner">
-                                <div class="item-title">Urkundenstatus</div>
-                                <div class="item-after">Alle</div>
+                        </li>
+                    {{/with}}
+                    {{#with statusSettings}}
+                        <li class="accordion-item">
+                            <a href="" class="item-link item-content">
+                                <div class="item-media"><i class="f7-icons">tags</i></div>
+                                <div class="item-inner">
+                                    <div class="item-title">Urkundenstatus</div>
+                                    <div class="item-after">{{text}}</div>
+                                </div>
+                            </a>
+                            <div class="accordion-item-content" style="padding-left: 5%;">
+                                <div class="list-block">
+                                    <ul>
+                                        <li>
+                                            <div class="item-content">
+                                                <div class="item-inner">
+                                                    <div class="item-title label">Bereit</div>
+                                                    <div class="item-input">
+                                                        <label class="label-switch">
+                                                            <input type="checkbox" {{checked ready}}>
+                                                            <div class="checkbox" data-type="status"
+                                                                 data-attr="ready"></div>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="item-content">
+                                                <div class="item-inner">
+                                                    <div class="item-title label">Nicht Bereit</div>
+                                                    <div class="item-input">
+                                                        <label class="label-switch">
+                                                            <input type="checkbox" {{checked notReady}}>
+                                                            <div class="checkbox" data-type="status"
+                                                                 data-attr="notReady"></div>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="item-content">
+                                                <div class="item-inner">
+                                                    <div class="item-title label">Fertig</div>
+                                                    <div class="item-input">
+                                                        <label class="label-switch">
+                                                            <input type="checkbox" {{checked finish}}>
+                                                            <div class="checkbox" data-type="status"
+                                                                 data-attr="finish"></div>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                        </a>
-                        <div class="accordion-item-content" style="padding-left: 5%;">
-                            <div class="list-block">
-                                <ul>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Bereit</div>
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox">
-                                                        <div class="checkbox"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Nicht Bereit</div>
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox">
-                                                        <div class="checkbox"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title label">Fertig</div>
-                                                <div class="item-input">
-                                                    <label class="label-switch">
-                                                        <input type="checkbox">
-                                                        <div class="checkbox"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
+                        </li>
+                    {{/with}}
                 </ul>
             </div>
 
